--- a/drivers/serial/Kconfig
+++ b/drivers/serial/Kconfig
@@ -1506,4 +1506,12 @@ config SERIAL_GRLIB_GAISLER_APBUART_CONSOLE
 	help
 	Support for running a console on the GRLIB APBUART
 
+config TS4700_ISA16550
+        tristate "TS-4700 ISA 16550 serial port support"
+        depends on SERIAL_8250 && MACH_TS47XX
+        help
+          TS-4700 ISA 16550 serial port support.  
+          Select this if you want to use Technologic Systems PC-104
+          products that have 16550-style UARTS, e.g., the TS-SER2 board.
+
 endmenu
