Disabled L2 cache due to related crashes with USB Ethernet drivers

--- a/arch/arm/configs/ts4700_defconfig
+++ b/arch/arm/configs/ts4700_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.34
-# Fri Feb 22 08:27:09 2013
+# Fri Mar  1 09:26:27 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -271,7 +271,7 @@ CONFIG_PLAT_PXA=y
 #
 CONFIG_CPU_MOHAWK=y
 # CONFIG_CPU_MOHAWK_OLD_ID is not set
-CONFIG_CPU_L2_CACHE=y
+# CONFIG_CPU_L2_CACHE is not set
 # CONFIG_ENABLE_COREIDLE is not set
 CONFIG_CPU_32v5=y
 CONFIG_CPU_ABRT_EV5T=y
@@ -289,7 +289,6 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
-CONFIG_OUTER_CACHE=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
 CONFIG_IWMMXT=y
 CONFIG_COMMON_CLKDEV=y
@@ -817,6 +816,7 @@ CONFIG_SERIAL_PXA_CONSOLE=y
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_TIMBERDALE is not set
+# CONFIG_TS4700_ISA16550 is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
