--- a/arch/arm/configs/ts471x_defconfig
+++ b/arch/arm/configs/ts471x_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.34
-# Mon Feb 25 09:02:23 2013
+# Fri Mar  1 09:25:48 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -274,7 +274,7 @@ CONFIG_PLAT_PXA=y
 #
 CONFIG_CPU_MOHAWK=y
 # CONFIG_CPU_MOHAWK_OLD_ID is not set
-CONFIG_CPU_L2_CACHE=y
+# CONFIG_CPU_L2_CACHE is not set
 # CONFIG_ENABLE_COREIDLE is not set
 CONFIG_CPU_32v5=y
 CONFIG_CPU_ABRT_EV5T=y
@@ -292,7 +292,6 @@ CONFIG_ARM_THUMB=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
-CONFIG_OUTER_CACHE=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
 CONFIG_IWMMXT=y
 CONFIG_COMMON_CLKDEV=y
