--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -46,6 +46,15 @@ config MMC3
 
 	  If unsure, say N.
 
+	  
+config TS47XX_OFFBOARD_MMC
+   bool "TS-471X Offboard MMC support"
+   depends on MACH_TS47XX && MMC
+   help
+     Select this if you have a TS471X board with an off-board eMMC chip.
+     This option will cause the power to the off-board chip to be
+     turned on (if a ts471x board is detected at boot).
+	  
 config MMC_SDHCI
 	tristate "Secure Digital Host Controller Interface support"
 	depends on HAS_DMA
