--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -25,7 +25,7 @@ config MMC_PXA
 	  If unsure, say N.
 
 config MMC_PXA_SDH
-	bool "Marvell PXA168/PXA910 SD Host Controller support"
+	tristate "Marvell PXA168/PXA910 SD Host Controller support"
 	depends on ARCH_PXA || ARCH_MMP
 	select MMC_SDHCI
 	select MMC_SDHCI_IO_ACCESSORS
