--- a/drivers/serial/Makefile
+++ b/drivers/serial/Makefile
@@ -84,3 +84,6 @@ obj-$(CONFIG_SERIAL_QE) += ucc_uart.o
 obj-$(CONFIG_SERIAL_TIMBERDALE)	+= timbuart.o
 obj-$(CONFIG_SERIAL_GRLIB_GAISLER_APBUART) += apbuart.o
 obj-$(CONFIG_TS4700_ISA16550) += ts4700_isa16550.o
+obj-$(CONFIG_SERIAL_TSUART) += tsuart1.o
+obj-$(CONFIG_SERIAL_TSUART_BAT3) += tsuart-bat3.o
+obj-$(CONFIG_SERIAL_TSUART_RF) += tsuart-rf.o
